implementação básica finalizada
