# src/main/java/com/tinytale/sensedetect/dtos/SenseDetectDTO.java
@@ -1,0 +1,11 @@
+package com.tinytale.sensedetect.dtos;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+
+@JsonIgnoreProperties(ignoreUnknown = true)
+public record SenseDetectDTO(
+    String mensagem,
+    String idioma
+) {
+
+}
