# src/main/java/com/tinytale/sensedetect/dtos/SenseDetectResponseDTO.java
@@ -1,0 +1,7 @@
+package com.tinytale.sensedetect.dtos;
+
+public record SenseDetectResponseDTO(
+    String status
+) {
+
+}
