# src/main/resources/static/swagger.yaml
@@ -22,34 +22,30 @@ externalDocs:
   url: 'http://swagger.io'
 
 servers:
-  - url: https://api.tinytale.com/v1/sensedetect
-    description: The production API server
+  - url: http://localhost:8080/
+    description: The local development API server
 
 paths:
-  /:
-    get:
-      summary: Verifica se a mensagem é compreensível ou não. Retorna allowed se a mensagem for inteligível e not_allowed se não for.
+  /sensedetect:
+    post:
+      summary: Recebe e verifica se a mensagem é compreensível ou não. Retorna allowed se a mensagem for inteligível e not_allowed se não for.
       operationId: verificarInteligibilidade
       tags:
         - Verificar inteligibilidade
-      parameters:
-        - name: mensagem
-          in: query
-          description: A mensagem a ser verificada
-          required: true
-          schema:
-            type: string
+      requestBody:
+            description: Um objeto contendo a mensagem a ser verificada e seu idioma
+            required: true
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/SenseDetectDTO'
       responses:
         '200':
-          description: Indica se a tag é permitida ou não
+          description: Indica se a mensagem é permitida ou não
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    enum: [allowed, not_allowed]
+                $ref: '#/components/schemas/SenseDetectResponseDTO'
         '400':
           $ref: '#/components/responses/IllegalInput'
         '404':
@@ -59,6 +55,26 @@ paths:
 
 components:
   schemas:
+    SenseDetectDTO:
+      type: object
+      properties:
+        mensagem:
+          type: string
+          description: A mensagem a ser verificada
+          example: "jahasj jahsasda a"
+        idioma:
+          type: string
+          description: O idioma da mensagem a ser verificada
+          default: english
+
+    SenseDetectResponseDTO:
+      type: object
+      properties:
+        status:
+          type: string
+          description: Indica o status da verificação
+          enum: [allowed, not_allowed]
+
     GeneralError:
       type: object
       properties:
